--- a/CSS/newstyle.css
+++ b/CSS/newstyle.css
@@ -11,6 +11,7 @@
 body {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
     background-color: #f5fefd;
@@ -322,6 +323,7 @@ form.login-form button.sign-in:active {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    transition: all 300ms;
 }
 
 .navigation a {
@@ -900,6 +902,7 @@ a.active-content::before {
     font-family: var(--button);
     font-size: 14px;
     overflow: hidden;
+    transition: all 300ms;
 }
 
 .record-container {
